--- a/franchisee.html
+++ b/franchisee.html
@@ -22,6 +22,7 @@
         <div class="background">
           <div class="background-wave">
             <div class="background-tiger-logo">
+              <img src="/images/background_img/logo_black.webp" alt="老虎堂logo">
             </div>
           </div>
           <!-- 主要區域 -->
@@ -38,7 +39,94 @@
             </div>
             <!-- 老虎堂logo -->
             <div class="tiger-main-logo">
-              <img src="/img/logo- Join Our Franchise!.svg" alt="">
+              <img src="/img/logo- Join Our Franchise!.svg" alt="老虎堂加入我們Logo">
+            </div>
+            <div class="steps-title">
+                <span>授</span>
+                <span>權</span>
+                <span>流</span>
+                <span>程</span>
+            </div>
+            <div class="steps-group">
+              <div class="steps">
+                <div class="step1">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>1</span>
+                </div>
+                <div class="steps-text">線上填寫申請資料</div>
+              </div>
+              <div class="steps">
+                <div class="step2">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>2</span>
+                </div>
+                <div class="steps-text">合作夥伴資格初審</div>
+              </div>
+              <div class="steps">
+                <div class="step3">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>3</span>
+                </div>
+                <div class="steps-text">合作方案洽談與達成共識[安排雙方首次會面]</div>
+              </div>
+              <div class="steps">
+                <div class="step4">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>4</span>
+                </div>
+                <div class="steps-text">合作夥伴資格複審與合約討論[安排雙方二次會面]</div>
+              </div>
+              <div class="steps">
+                <div class="step5">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>5</span>
+                </div>
+                <div class="steps-text">簽訂正式合約</div>
+              </div>
+              <div class="steps">
+                <div class="step6">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>6</span>
+                </div>
+                <div class="steps-text">品牌授權金匯款完成</div>
+              </div>
+              <div class="steps">
+                <div class="step7">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>7</span>
+                </div>
+                <div class="steps-text">Know-how技術轉移、立地條件評估與建議</div>
+              </div>
+              <div class="steps">
+                <div class="step8">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>8</span>
+                </div>
+                <div class="steps-text">整體規劃、施工建議、訓練考核</div>
+              </div>
+              <div class="steps">
+                <div class="step9">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>9</span>
+                </div>
+                <div class="steps-text">試營運</div>
+              </div>
+              <div class="steps">
+                <div class="step10">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>10</span>
+                </div>
+                <div class="steps-text">正式開幕</div>
+              </div>
+              <div class="steps">
+                <div class="step11">
+                  <img src="/img/circle.png" alt="步驟外框">
+                  <span>11</span>
+                </div>
+                <div class="steps-text">永續經營</div>
+              </div>
+              
+            </div>
             </div>
           </div>
         </div>
