--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -337,7 +337,7 @@
 
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="./js/swiperJS.js"></script>
+    <script src="./js/distribution-confirm.js"></script>
 </body>
 
 </html>
