--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
         AOS.init();
     </script>
 
-    <script src="./js/swiperJS.js"></script>
+    <script src="./js/index.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/banner.js"></script>
     <script src="./js/media.js"></script>
