--- a/distribution-popwindow.html
+++ b/distribution-popwindow.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <link rel="stylesheet" href="/css/extra-distribution.css" />
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/franchisee.css" />
     <!-- common css -->
     <link rel="stylesheet" href="./css/common.css" />
@@ -113,7 +111,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <button href="" class="product-background-hover-more " title="更多商品資訊按鈕">MORE</button>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -138,13 +136,13 @@
                   <div class="yellow-box">
                     <img src="/img/add_for_ask.svg" alt="黃色詢問框" />
                   </div>
-                  <div class="product-background-hover" id="">
+                  <div class="product-background-hover">
                     <a href="" class="yellow-box-hover" title="詢問加入購物車框"
                       ><img
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕" id="">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -174,7 +172,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -204,7 +202,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -234,7 +232,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -264,7 +262,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -294,7 +292,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -324,7 +322,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -355,7 +353,7 @@
                         src="/img/add_for_ask_hover.svg"
                         alt="黃色詢問框hover"
                     /></a>
-                    <a href="" class="product-background-hover-more" title="更多商品資訊按鈕">MORE</a>
+                    <button class="product-background-hover-more">MORE</button>
                   </div>
                 </div>
               </div>
@@ -394,7 +392,6 @@
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper(".mySwiper", {
@@ -458,7 +455,7 @@
    
    
    
-   <!-- 彈跳視窗測試 -->
+   <!-- 彈跳視窗初代 -->
     <div id="pop-window" class="im-pop-window">
       <div class="container">
           <div class="pop-window-content">
@@ -774,10 +771,13 @@
               </div>
           </div>
       </div>
-  </div>
+    </div>
+    <!-- AOS.js  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- pop-windowJs -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/popwindow.js"></script>
     <script src="./js/distribution.js"></script>
+    <script src="./js/franchisee.js"></script>
   </body>
 </html>
