--- a/distribution.html
+++ b/distribution.html
@@ -500,7 +500,7 @@
                             <div class="swiper-wrapper">
 
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <div class="">
+                                    <div class="pop-sub-border-img">
                                         <img class="sub-img" src="./img/sesamebun1.jpeg" />
                                     </div>
                                 </div>
