--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!-- 共通CSS -->
     <link rel="stylesheet" href="./css/common.css">
 
-
     <!-- 專頁css開始 -->
 
     <!-- font-awesome -->
@@ -1432,6 +1431,7 @@
     <script src="./js/banner.js"></script>
     <script src="./js/media.js"></script>
     <script src="./js/about.js"></script>
+    <script src="./js/franchisee.js"></script>
 </body>
 
 </html>
