--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@
                 </div>
                 <div class="franchisee-container-big">
                     <div class="franchisee-container-animation" data-aos="zoom-in">
-                        <a href="" class="franchisee-link" title="加盟專區連結">
+                        <a href="./franchisee.html" class="franchisee-link" title="加盟專區連結">
                             <div class="join-us-img">
                                 <div class="join-us-info">
                                     <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i
