--- a/franchisee.html
+++ b/franchisee.html
@@ -1,142 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  
+
   <!-- 共同css -->
   <link rel="stylesheet" href="/css/common.css">
+  <link rel="stylesheet" href="/css/preface.css">
 
   <!-- 9/20 新加盟專區css (之後另行命名) -->
   <link rel="stylesheet" href="/css/Franchisee-new-0920.css">
 </head>
+
 <body>
-    <header></header>
+  <header></header>
 
-    <main>
+  <main>
 
-      <!-- 翔 授權流程 -->
-      <section id="authorization">
-        <!-- 主要背景 -->
-        <div class="background">
-          <div class="background-wave">
-            <div class="background-tiger-logo">
-              <img src="/images/background_img/logo_black.webp" alt="老虎堂logo">
-            </div>
-          </div>
-          <!-- 主要區域 -->
-          <div class="container">
-            <!-- 加盟專區中英文logo -->
-            <div class="franchisee-logo">
-              <div class="franchisee-logo-img">
-                <img src="/img/franchisee.png" alt="加盟專區Logo">
-              </div>
-              <div class="franchisee-logo-cn-en">
-                <div class="franchisee-logo-cn">加盟專區</div>
-                <div class="franchisee-logo-en">FRANCHISEE</div>
-              </div>
-            </div>
-            <!-- 老虎堂logo -->
-            <div class="tiger-main-logo">
-              <img src="/img/logo- Join Our Franchise!.svg" alt="老虎堂加入我們Logo">
-            </div>
-            <div class="steps-title">
-                <span>授</span>
-                <span>權</span>
-                <span>流</span>
-                <span>程</span>
-            </div>
-            <div class="steps-group">
-              <div class="steps">
-                <div class="step1">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>1</span>
-                </div>
-                <div class="steps-text">線上填寫申請資料</div>
-              </div>
-              <div class="steps">
-                <div class="step2">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>2</span>
-                </div>
-                <div class="steps-text">合作夥伴資格初審</div>
-              </div>
-              <div class="steps">
-                <div class="step3">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>3</span>
-                </div>
-                <div class="steps-text">合作方案洽談與達成共識[安排雙方首次會面]</div>
-              </div>
-              <div class="steps">
-                <div class="step4">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>4</span>
-                </div>
-                <div class="steps-text">合作夥伴資格複審與合約討論[安排雙方二次會面]</div>
-              </div>
-              <div class="steps">
-                <div class="step5">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>5</span>
-                </div>
-                <div class="steps-text">簽訂正式合約</div>
-              </div>
-              <div class="steps">
-                <div class="step6">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>6</span>
-                </div>
-                <div class="steps-text">品牌授權金匯款完成</div>
-              </div>
-              <div class="steps">
-                <div class="step7">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>7</span>
-                </div>
-                <div class="steps-text">Know-how技術轉移、立地條件評估與建議</div>
-              </div>
-              <div class="steps">
-                <div class="step8">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>8</span>
-                </div>
-                <div class="steps-text">整體規劃、施工建議、訓練考核</div>
-              </div>
-              <div class="steps">
-                <div class="step9">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>9</span>
-                </div>
-                <div class="steps-text">試營運</div>
-              </div>
-              <div class="steps">
-                <div class="step10">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>10</span>
-                </div>
-                <div class="steps-text">正式開幕</div>
-              </div>
-              <div class="steps">
-                <div class="step11">
-                  <img src="/img/circle.png" alt="步驟外框">
-                  <span>11</span>
-                </div>
-                <div class="steps-text">永續經營</div>
-              </div>
-              
-            </div>
-            </div>
+    <!-- 翔 授權流程 -->
+    <section id="authorization">
+      <!-- 主要背景 -->
+      <div class="background">
+        <div class="background-wave">
+          <div class="background-tiger-logo">
+            <img src="/images/background_img/logo_black.webp" alt="老虎堂logo">
           </div>
         </div>
-      </section>
+        <!-- 主要區域 -->
+        <div class="container">
+          <!-- 加盟專區中英文logo -->
+          <div class="franchisee-logo">
+            <div class="franchisee-logo-img">
+              <img src="/img/franchisee.png" alt="加盟專區Logo">
+            </div>
+            <div class="franchisee-logo-cn-en">
+              <div class="franchisee-logo-cn">加盟專區</div>
+              <div class="franchisee-logo-en">FRANCHISEE</div>
+            </div>
+          </div>
+          <!-- 老虎堂logo -->
+          <div class="tiger-main-logo">
+            <img src="/img/logo- Join Our Franchise!.svg" alt="老虎堂加入我們Logo">
+          </div>
+          <div class="steps-title">
+            <span>授</span>
+            <span>權</span>
+            <span>流</span>
+            <span>程</span>
+          </div>
+          <div class="steps-group">
+            <div class="steps">
+              <div class="step1">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>1</span>
+              </div>
+              <div class="steps-text">線上填寫申請資料</div>
+            </div>
+            <div class="steps">
+              <div class="step2">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>2</span>
+              </div>
+              <div class="steps-text">合作夥伴資格初審</div>
+            </div>
+            <div class="steps">
+              <div class="step3">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>3</span>
+              </div>
+              <div class="steps-text">合作方案洽談與達成共識[安排雙方首次會面]</div>
+            </div>
+            <div class="steps">
+              <div class="step4">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>4</span>
+              </div>
+              <div class="steps-text">合作夥伴資格複審與合約討論[安排雙方二次會面]</div>
+            </div>
+            <div class="steps">
+              <div class="step5">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>5</span>
+              </div>
+              <div class="steps-text">簽訂正式合約</div>
+            </div>
+            <div class="steps">
+              <div class="step6">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>6</span>
+              </div>
+              <div class="steps-text">品牌授權金匯款完成</div>
+            </div>
+            <div class="steps">
+              <div class="step7">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>7</span>
+              </div>
+              <div class="steps-text">Know-how技術轉移、立地條件評估與建議</div>
+            </div>
+            <div class="steps">
+              <div class="step8">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>8</span>
+              </div>
+              <div class="steps-text">整體規劃、施工建議、訓練考核</div>
+            </div>
+            <div class="steps">
+              <div class="step9">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>9</span>
+              </div>
+              <div class="steps-text">試營運</div>
+            </div>
+            <div class="steps">
+              <div class="step10">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>10</span>
+              </div>
+              <div class="steps-text">正式開幕</div>
+            </div>
+            <div class="steps">
+              <div class="step11">
+                <img src="/img/circle.png" alt="步驟外框">
+                <span>11</span>
+              </div>
+              <div class="steps-text">永續經營</div>
+            </div>
 
-      <!-- 夫 常見問題 -->
-      <section></section>
-    </main>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
 
-    <!-- 秋 前言說明 -->
-    <footer></footer>
+    <!-- 夫 常見問題 -->
+    <section></section>
+  </main>
+
+  <!-- 秋 前言說明 -->
+  <footer>
+    <div class="footer-container">
+      <img class="footer-logo" src="/img/join-us-logo.png" alt="join-us-logo">
+
+      <div class="store-explain">
+        <div class="explain-container">
+          <div class="open-store">申請開店前言說明</div>
+          <div class="preface">
+            <span>1.</span>
+            <div class="white-word">認知與接受條款</div>
+          </div>
+          <div class="preface">
+            <span>2.</span>
+            <div class="white-word">
+              我已詳細閱讀「品牌授權流程」與「FAQ」等資料,並將填寫開店申請表格。</div>
+          </div>
+          <div class="preface">
+            <span>3.</span>
+            <div class="white-word specific">
+              此份問卷並非合約,並不具有任何雙方權益之效力,所填寫的內容,視為公司內部客戶機密資訊,將會妥善保存管理。</div>
+          </div>
+          <div class="preface">
+            <span>4.</span>
+            <div class="white-word">
+              為加速您的開店流程,請務必仔細填寫以下每項表格我們將有專人儘速為您處理。</div>
+          </div>
+        </div>
+      </div>
+      <div class="button">
+        <!-- 尚未連結敏齊頁面 -->
+        <a href="/join-us">開始申請</a>
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
