更新連結名稱
更新連結名稱

--- a/franchisee.html
+++ b/franchisee.html
@@ -170,7 +170,7 @@
       </div>
       <div class="button">
         <!-- 尚未連結敏齊頁面 -->
-        <a href="/join-us">開始申請</a>
+        <a href="/franchisee-form">開始申請</a>
       </div>
     </div>
   </footer>
