--- a/franchisee.html
+++ b/franchisee.html
@@ -141,8 +141,8 @@
 
   <!-- 秋 前言說明 -->
   <footer>
+    <img class="footer-logo" src="/img/join-us-logo.png" alt="join-us-logo">
     <div class="footer-container">
-      <img class="footer-logo" src="/img/join-us-logo.png" alt="join-us-logo">
 
       <div class="store-explain">
         <div class="explain-container">
@@ -168,10 +168,9 @@
           </div>
         </div>
       </div>
-      <div class="button">
-        <!-- 尚未連結敏齊頁面 -->
-        <a href="/franchisee-form">開始申請</a>
-      </div>
+      <a href="./franchisee-form.html">
+        <div class="button">開始申請</div>
+      </a>     
     </div>
   </footer>
 </body>
