順序錯了 要調

--- a/franchisee.html
+++ b/franchisee.html
@@ -151,17 +151,143 @@
                 <div class="question-area">
                   <div class="top-area">
                     <div class="mark"></div>
-                    <h3>如何申請成為老虎堂合作夥伴?</h3>
+                    <div class="title-text">如何申請成為老虎堂合作夥伴?</div>
                   </div>
-                  <h3 class="down-area">
+                  <div class="down-area">
                     非常感謝您對老虎堂品牌的支持與愛護，我們期盼與各地夥伴攜手合作 將老虎堂品牌拓展至全球廣大市場。 為了對您有更多的認識，煩請至合作專區-我要開店，線上填寫「申請者資料」，將有專人予以回覆。
-                  </h3>
+                  </div>
+                </div>
+              </label>
+
+              <!-- 授權方式與期間 QA2 -->
+              <input type="checkbox" id="qa2" hidden>
+              <label for="qa2" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">區域獨家代理授權的方式與期間？</div>
+                  </div>
+                  <div class="down-area">
+                    「總代理區域主授權」是以一個城市/區域為單位，擁有獨家經營權，代理商須有自身經營團隊，於區域內發展一定店鋪數量。授權經營期間一次基本以「五年」計。
+                  </div>
+                </div>
+              </label>
+
+              <!-- 開店申請表格 QA3 -->
+              <input type="checkbox" id="qa3" hidden>
+              <label for="qa3" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">送出開店申請表格後，多久會有人跟我聯繫？</div>
+                  </div>
+                  <div class="down-area">
+                    提交完整的申請計畫書後，初審時間約3-5個工作天，將有專人與您聯繫。
+                  </div>
+                </div>
+              </label>
+
+              <!-- 原料 QA4 -->
+              <input type="checkbox" id="qa4" hidden>
+              <label for="qa4" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">原物料提供與採購</div>
+                  </div>
+                  <div class="down-area">
+                    除了新鮮的奶製品，可以開放在當地採購以外，為了維持穩定品質與確保各店產品一致性，所有合作夥伴需向總部訂購關鍵技術原物料。
+                  </div>
+                </div>
+              </label>
+
+              <!-- 經營區域 QA5 -->
+              <input type="checkbox" id="qa5" hidden>
+              <label for="qa5" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">我希望經營的區域無法點選？</div>
+                  </div>
+                  <div class="down-area">
+                    如您希望經營的城市或地區無法點選，即表示此區域已有獨家代理商，暫不開放代理 / 加盟業務洽談。
+                  </div>
+                </div>
+              </label>
+
+              <!-- 代理商資格 QA6 -->
+              <input type="checkbox" id="qa6" hidden>
+              <label for="qa6" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">代理商資格</div>
+                  </div>
+                  <div class="down-area">
+                    1.對餐飲業具備高度熱誠，有餐飲開店經驗佳 2.認同老虎堂的經營理念 3.具經營管理能力 4.有自身經營團隊(行銷、營運、財務...等) 5.對經營區域了解，熟悉市場上競爭品牌
+                  </div>
+                </div>
+              </label>
+
+              <!-- 代理金額 QA7 -->
+              <input type="checkbox" id="qa7" hidden>
+              <label for="qa7" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">區域代理金多少錢？</div>
+                  </div>
+                  <div class="down-area">
+                    老虎堂總部依照各地經濟發展程度、人均消費水平等數據，評估後製訂出一套各區域代理金標準。需請您先完整填寫「申請者基本資料」，並通過代理商資格初審後，我司方進行報價流程。
+                  </div>
                 </div>
               </label>
             </div>
 
             <!-- 右邊aka電腦版 -->
             <div class="right-container">
+
+              <!-- 授權方式與期間 QA2 -->
+              <input type="checkbox" id="qar2" hidden>
+              <label for="qar2" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">區域獨家代理授權的方式與期間？</div>
+                  </div>
+                  <div class="down-area">
+                    「總代理區域主授權」是以一個城市/區域為單位，擁有獨家經營權，代理商須有自身經營團隊，於區域內發展一定店鋪數量。授權經營期間一次基本以「五年」計。
+                  </div>
+                </div>
+              </label>
+
+              <!-- 原料 QA4 -->
+              <input type="checkbox" id="qar4" hidden>
+              <label for="qar4" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">原物料提供與採購</div>
+                  </div>
+                  <div class="down-area">
+                    除了新鮮的奶製品，可以開放在當地採購以外，為了維持穩定品質與確保各店產品一致性，所有合作夥伴需向總部訂購關鍵技術原物料。
+                  </div>
+                </div>
+              </label>
+
+              <!-- 代理商資格 QA6 -->
+              <input type="checkbox" id="qar6" hidden>
+              <label for="qar6" class="qa-area">
+                <div class="question-area">
+                  <div class="top-area">
+                    <div class="mark"></div>
+                    <div class="title-text">代理商資格</div>
+                  </div>
+                  <div class="down-area">
+                    1.對餐飲業具備高度熱誠，有餐飲開店經驗佳 2.認同老虎堂的經營理念 3.具經營管理能力 4.有自身經營團隊(行銷、營運、財務...等) 5.對經營區域了解，熟悉市場上競爭品牌
+                  </div>
+                </div>
+              </label>
 
             </div>
 
