--- a/franchisee-form.html
+++ b/franchisee-form.html
@@ -23,7 +23,7 @@
         <div class="form-logo"></div>
         <div class="form-title">加盟主資料填寫</div>
         <div class="form-link">
-          <a href="">★ 台灣加盟請點此 Taiwan Franchise Store ★</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeDtvkV21syrYQjA_i8sY6DXGPsv2jMaMrzEXa2McmbmcVchg/viewform">★ 台灣加盟請點此 Taiwan Franchise Store ★</a>
         </div>
       </div>
       <div class="form main">
