--- a/franchisee.html
+++ b/franchisee.html
@@ -153,9 +153,11 @@
                     <div class="mark"></div>
                     <div class="title-text">如何申請成為老虎堂合作夥伴?</div>
                   </div>
-                  <div class="down-area">
-                    非常感謝您對老虎堂品牌的支持與愛護，我們期盼與各地夥伴攜手合作 將老虎堂品牌拓展至全球廣大市場。 為了對您有更多的認識，煩請至合作專區-我要開店，線上填寫「申請者資料」，將有專人予以回覆。
-                  </div>
+                  <!-- <div class="down-area-container"> -->
+                    <div class="down-area">
+                      非常感謝您對老虎堂品牌的支持與愛護，我們期盼與各地夥伴攜手合作 將老虎堂品牌拓展至全球廣大市場。 為了對您有更多的認識，煩請至合作專區-我要開店，線上填寫「申請者資料」，將有專人予以回覆。
+                    </div>
+                  <!-- </div> -->
                 </div>
               </label>
 
@@ -292,6 +294,7 @@
             </div>
 
           </div>
+          <img src="./images/background_img/logo_black.webp" alt="老虎堂背景圖片" class="img-bg">
         </div>
       </div>
 
@@ -333,5 +336,6 @@
     </div>
   </footer>
 </body>
+<script src="./js/common-question.js"></script>
 
 </html>
