加上跳轉連結

--- a/distribution.html
+++ b/distribution.html
@@ -441,7 +441,7 @@
         </div>
         <div class="franchisee-container-big">
           <div class="franchisee-container-animation" data-aos="zoom-in">
-            <a href="" class="franchisee-link" title="點擊立即加盟按鈕">
+            <a href="./franchisee.html" class="franchisee-link" title="點擊立即加盟按鈕">
               <div class="join-us-img">
                 <div class="join-us-info">
                   <h2>
