--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
     <header>
         <nav>
             <section class="nav-logo">
-                <a href="https://tigersugar.com/"></a>
-                <img class="nav-logo-btn" src="./img/LOGO.png" alt="tiger-logo">
+                <a href="./index.html">
+                    <img class="nav-logo-btn" src="./img/LOGO.png" alt="tiger-logo">
+                </a>
             </section>
 
             <section class="nav-main">
@@ -288,7 +289,7 @@
                     </div>
         </nav>
         <!-- 秋 選單紀錄 按鈕 -->
-        <a href="" class="shop-cart-container" title="前往購物車">
+        <a href="./distribution-confirm.html" class="shop-cart-container" title="前往購物車">
             <img class="shop-cart" src="./img/shop_cart_button.svg">
             <div class="shop-cart-amount-area">
                 <img class="shop-cart-amount" src="./img/amount.svg">
@@ -494,7 +495,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./popwindow.html" class="commodity-more-button btn" title="更多商品">
+                                            <a href="./distribution.html" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -519,7 +520,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./distribution-confirm.html" class="commodity-more-button btn"
+                                            <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
                                             </a>
@@ -545,7 +546,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./chiu.html" class="commodity-more-button btn" title="更多商品">
+                                            <a href="./distribution.html" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -570,7 +571,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="https://tigersugar.com/" class="commodity-more-button btn"
+                                            <a href="./distribution.html" class="commodity-more-button btn"
                                                 title="更多商品">
                                                 MORE
                                             </a>
@@ -596,7 +597,7 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="" class="commodity-more-button btn" title="更多商品">
+                                            <a href="./distribution.html" class="commodity-more-button btn" title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -622,7 +623,7 @@
                             <img class="next-prev-img" src="./img/commodity-prev.svg" alt="swiper上一個按鈕">
                         </div>
                     </div>
-                    <a href="" class="distribution-area-button" title="更多商品">更多商品</a>
+                    <a href="./distribution.html" class="distribution-area-button" title="更多商品">更多商品</a>
                 </div>
             </div>
             </div>
