--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -325,7 +325,7 @@
             </div>
             <div class="franchisee-container-big">
                 <div class="franchisee-container-animation" data-aos="zoom-in">
-                    <a href="" class="franchisee-link" title="前往加盟頁">
+                    <a href="./franchisee.html" class="franchisee-link" title="前往加盟頁">
                         <div class="join-us-img">
                             <div class="join-us-info">
                                 <h2> <i class="bi bi-star-fill"></i>&nbspJoin Our Franchise! <i
