--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <section class="nav-main">
                 <section class="main-menu">
                     <!----------------------------- 關於我們 ------------------------------------>
-                    <div class="about">
-                        <a href="#about" class="about-link">
+                    <a href="#about" class="about-link">
+                        <div class="about">
                             <div class="about-img">
                                 <div class="main-menu-img">
                                     <img class="main-menu-about" src="./img/about.png" alt="about-icon">
@@ -65,11 +65,11 @@
                                 <div class="text-ch">關於我們</div>
                                 <div class="text-en">ABOUT</div>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                     <!----------------------------- 產品經銷 ------------------------------------>
-                    <div class="distribution">
-                        <a href="#distribution" class="distribution-link">
+                    <a href="#distribution" class="distribution-link">
+                        <div class="distribution">
                             <div class="main-menu-img">
                                 <img class="main-menu-distribution" src="./img/distribution.png"
                                     alt="distribution-icon">
@@ -80,11 +80,11 @@
                                 <span class="text-ch">產品經銷</span>
                                 <span class="text-en">DISTRIBUTION</span>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                     <!----------------------------- 熱門經典 ------------------------------------>
-                    <div class="classic">
-                        <a href="#classic" class="classic-link">
+                    <a href="#classic" class="classic-link">
+                        <div class="classic">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./img/classic.png" alt="classic-icon">
                                 <img class="main-menu-classic-gold" src="./img/classic-gold.png"
@@ -94,11 +94,11 @@
                                 <span class="text-ch">熱門經典</span>
                                 <span class="text-en">CLASSIC</span>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                     <!----------------------------- 媒體露出 ------------------------------------>
-                    <div class="media">
-                        <a href="#media" class="media-link">
+                    <a href="#media" class="media-link">
+                        <div class="media">
                             <div class="main-menu-img">
                                 <img class="main-menu-media" src="./img/media.png" alt="media-icon">
                                 <img class="main-menu-media-gold" src="./img/media-gold.png" alt="media-icon-icon">
@@ -107,11 +107,11 @@
                                 <span class="text-ch">媒體露出</span>
                                 <span class="text-en">MEDIA</span>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                     <!----------------------------- 加盟專區 ------------------------------------>
-                    <div class="franchisee">
-                        <a href="#franchisee" class="franchisee-link">
+                    <a href="#franchisee" class="franchisee-link">
+                        <div class="franchisee">
                             <div class="main-menu-img">
                                 <img class="main-menu-franchisee" src="./img/franchisee.png" alt="franchisee-icon">
                                 <img class="main-menu-franchisee-gold" src="./img/franchisee-gold.png"
@@ -121,8 +121,8 @@
                                 <span class="text-ch">加盟專區</span>
                                 <span class="text-en">FRANCHISEE</span>
                             </div>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
 
                 </section>
                 <!----------------------------- 社群連結 ------------------------------------>
@@ -495,7 +495,8 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./distribution.html" class="commodity-more-button btn" title="更多商品">
+                                            <a href="./distribution.html" class="commodity-more-button btn"
+                                                title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -546,7 +547,8 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./distribution.html" class="commodity-more-button btn" title="更多商品">
+                                            <a href="./distribution.html" class="commodity-more-button btn"
+                                                title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
@@ -597,7 +599,8 @@
                                         <img class="ask-icon" src="./img/add_for_ask.svg" alt="黃色加入以詢問">
                                         <div class="product-img-hover">
                                             <img class="ask-icon-hover" src="./img/add_for_ask_hover.svg" alt="黃色加入以詢問">
-                                            <a href="./distribution.html" class="commodity-more-button btn" title="更多商品">
+                                            <a href="./distribution.html" class="commodity-more-button btn"
+                                                title="更多商品">
                                                 MORE
                                             </a>
                                         </div>
